# BlackBox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  black_box.c  hw_config.c
bt_help/: CMakeLists.txt  bt_main.c  bt_setup.c  bt_setup.h  help.c
lib/: CMakeLists.txt  bt_setup.c  bt_setup.h  btstack_config.h  ds1302.c  ds1302.h  elm327.c  elm327.h  lis3dh_i2c.c  lis3dh_i2c.h
output/2024.06.04/: data_06;35.csv
output/2025.06.07/: data_08;02.csv  data_09;36.csv
output/2025.06.09/: data_06;41.csv  data_12;39.csv
rtc_help/: CMakeLists.txt  ds1302.c  ds1302.h  main.c
